log/build_2024-12-12_15-30-21/pdctr/stderr.log
  File "/home/manav/robotis_ws/install/pdctr/lib/python3.10/site-packages/pdctr/current_calc_send.py", line 92
    -effort = int(effort)
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?

